# HydraExamples

./: .gitignore  CMakeLists.txt
cmake/: FindHydra.cmake
cython/: .gitignore  Hydra.pyx  HydraParameter.pxd  setup.py
include/HyFit/: RealVar.h
include/PDFs/: BasePDF.h  Exp.h  Gauss.h  Novosibirsk.h  NovosibirskClassic.h  Polynomial.h
include/hydra/: CurrentDevice.h
include/pdfs/: Exp.h  Novosibirsk.h
python/: CMakeLists.txt  main.cpp
scripts/timing_test/: requirements.txt  timer.py
src/: CMakeLists.txt
src/novo_fit/: CMakeLists.txt  Gauss.h  NewFit.cpp  NovoFit.cpp  NovoMultiFit.cpp  Novosibirsk.h
src/novo_fit/classic/: RooNovo.cpp  RooNovoFull.cpp  Untitled.ipynb
src/phsp/: CMakeLists.txt
src/simple_fit/: CMakeLists.txt  SimpleFit.cpp
